crates/pamoja-ffi/include/pamoja.h

/* pamoja C ABI. */

#pragma once

/* Generated by cbindgen from crates/pamoja-ffi. Do not edit by hand; run `cargo build -p pamoja-ffi` to regenerate. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// MQTT delivery guarantee, mirroring the protocol's quality-of-service levels.
typedef enum {
  // Fire and forget; the broker does not acknowledge delivery.
  PamojaQos_AtMostOnce = 0,
  // Delivered at least once and acknowledged.
  PamojaQos_AtLeastOnce = 1,
  // Delivered exactly once via a four-step handshake.
  PamojaQos_ExactlyOnce = 2,
} PamojaQos;

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
} PamojaStatus;

// An opaque handle to an MQTT client transport.
typedef struct PamojaMqttClient PamojaMqttClient;

// An opaque handle to a message received from a subscribed topic.
typedef struct PamojaMqttMessage PamojaMqttMessage;

// Connection settings for an MQTT client.
//
// `client_id` and `host` are borrowed null-terminated UTF-8 strings. A
// `keep_alive_secs` or `capacity` of `0` selects the core default.
typedef struct {
  // The MQTT client identifier presented to the broker.
  const char *client_id;
  // The broker hostname or IP address.
  const char *host;
  // The broker TCP port, conventionally 1883 for plaintext MQTT.
  uint16_t port;
  // Keep-alive interval in seconds, or 0 for the default of 30.
  uint32_t keep_alive_secs;
  // Bound on outstanding client requests, or 0 for the default of 64.
  uint32_t capacity;
  // Default quality of service for publishes and subscriptions.
  PamojaQos qos;
} PamojaMqttConfig;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

// Returns the calling thread's most recent error message, or null if none.
//
// # Returns
//
// A pointer to a null-terminated UTF-8 string owned by the library, valid until
// the next failing call on the same thread, or null if no error has been
// recorded. The caller must not free it and should copy it before making another
// pamoja call on this thread.
const char *pamoja_last_error_message(void);

// Returns the version string of the native pamoja library.
//
// # Returns
//
// A pointer to a static null-terminated UTF-8 string owned by the library. The
// caller must not free it; it is valid for the lifetime of the process.
const char *pamoja_version(void);

// Creates a disconnected MQTT client from the given settings.
//
// # Returns
//
// A heap-allocated client handle the caller owns and must release with
// [`pamoja_mqtt_client_free`], or null on failure with the reason available from
// [`pamoja_last_error_message`](crate::pamoja_last_error_message).
//
// # Safety
//
// `config` must point to a valid [`PamojaMqttConfig`] whose `client_id` and
// `host` are valid null-terminated UTF-8 strings for the duration of the call.
PamojaMqttClient *pamoja_mqtt_client_new(const PamojaMqttConfig *config);

// Connects to the broker and starts the background event loop.
//
// # Returns
//
// [`PamojaStatus::Ok`] once connected, or an error status whose message is
// available from [`pamoja_last_error_message`](crate::pamoja_last_error_message).
//
// # Safety
//
// `client` must be a non-null handle returned by [`pamoja_mqtt_client_new`] and
// not yet freed.
PamojaStatus pamoja_mqtt_client_connect(PamojaMqttClient *client);

// Publishes a payload to a topic.
//
// # Returns
//
// [`PamojaStatus::Ok`] once the payload is handed to the transport, or an error
// status.
//
// # Safety
//
// `client` must be a live handle from [`pamoja_mqtt_client_new`]; `topic` must be
// a valid null-terminated UTF-8 string; and `payload` must point to at least
// `payload_len` bytes, or be null when `payload_len` is 0.
PamojaStatus pamoja_mqtt_client_publish(PamojaMqttClient *client,
                                        const char *topic,
                                        const uint8_t *payload,
                                        uintptr_t payload_len);

// Subscribes to a topic filter.
//
// # Returns
//
// [`PamojaStatus::Ok`] once the subscription is registered, or an error status.
//
// # Safety
//
// `client` must be a live handle from [`pamoja_mqtt_client_new`] and `topic` a
// valid null-terminated UTF-8 string.
PamojaStatus pamoja_mqtt_client_subscribe(PamojaMqttClient *client, const char *topic);

// Awaits the next message from any subscribed topic.
//
// On success `*out_message` is set to a new message handle the caller owns and
// must release with [`pamoja_mqtt_message_free`], or to null once the connection
// has ended and no further messages will arrive.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success (including end of stream), or an error status.
//
// # Safety
//
// `client` must be a live handle from [`pamoja_mqtt_client_new`] and
// `out_message` must point to a writable `*mut PamojaMqttMessage`.
PamojaStatus pamoja_mqtt_client_recv(PamojaMqttClient *client, PamojaMqttMessage **out_message);

// Reports whether the client currently holds an active connection.
//
// # Returns
//
// `true` while connected. Returns `false` for a null handle or if the check
// panics.
//
// # Safety
//
// `client` must be a live handle from [`pamoja_mqtt_client_new`], or null.
bool pamoja_mqtt_client_is_connected(PamojaMqttClient *client);

// Closes the connection and stops the background event loop.
//
// # Returns
//
// [`PamojaStatus::Ok`] once the client has disconnected.
//
// # Safety
//
// `client` must be a live handle from [`pamoja_mqtt_client_new`].
PamojaStatus pamoja_mqtt_client_disconnect(PamojaMqttClient *client);

// Releases an MQTT client handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `client` must be a handle from [`pamoja_mqtt_client_new`] that has not already
// been freed, or null. After this call the handle must not be used again.
void pamoja_mqtt_client_free(PamojaMqttClient *client);

// Returns the topic a message was published to.
//
// # Returns
//
// A pointer to a null-terminated UTF-8 string valid until the message is freed,
// or null if `message` is null.
//
// # Safety
//
// `message` must be a live handle from [`pamoja_mqtt_client_recv`], or null.
const char *pamoja_mqtt_message_topic(const PamojaMqttMessage *message);

// Returns a pointer to a message's payload bytes.
//
// Use [`pamoja_mqtt_message_payload_len`] for the length. The pointer is valid
// until the message is freed.
//
// # Returns
//
// A pointer to the payload bytes, or null if `message` is null.
//
// # Safety
//
// `message` must be a live handle from [`pamoja_mqtt_client_recv`], or null.
const uint8_t *pamoja_mqtt_message_payload(const PamojaMqttMessage *message);

// Returns the length in bytes of a message's payload.
//
// # Returns
//
// The payload length, or 0 if `message` is null.
//
// # Safety
//
// `message` must be a live handle from [`pamoja_mqtt_client_recv`], or null.
uintptr_t pamoja_mqtt_message_payload_len(const PamojaMqttMessage *message);

// Releases a message handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `message` must be a handle from [`pamoja_mqtt_client_recv`] that has not
// already been freed, or null. After this call the handle must not be used again.
void pamoja_mqtt_message_free(PamojaMqttMessage *message);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus